src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_third_field_colon.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a, b: a, c a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected identifier, expected one of `:`",
                span: 1:19; [18, 19],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1282,
                ),
            },
            Diagnostic {
                message: "Unexpected `eof`, expected one of `;`, `.`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:22; [21, 21],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1388,
                ),
            },
        ],
    },
)
