src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_third_field_name.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a, b: a, : a };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of (2) identifier 1574, `}` 1573",
                span: 1:17; [16, 17],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1569,
                ),
            },
        ],
    },
)
