src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_third_field_value.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a, b: a, c: };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of (8) identifier 945, number 946, `true` 948, `false` 949, `if` 943, `while` 944, `(` 950, `-` 947",
                span: 1:20; [19, 20],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    939,
                ),
            },
        ],
    },
)
