src/snapshots/transmute__parser__tests__err_struct_missing_close_curly_one_field.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of `,`, `}`",
                span: 1:21; [20, 20],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    615,
                ),
            },
        ],
    },
)
