src/snapshots/transmute__parser__tests__err_struct_missing_name.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [],
        statements: [],
        root: [],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of identifier",
                span: 1:8; [7, 8],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    266,
                ),
            },
        ],
    },
)
