src/snapshots/transmute__parser__tests__err_struct_missing_open_curly_no_fields.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `{`, got `}`",
                span: 1:10; [9, 10],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    568,
                ),
            },
        ],
    },
)
