src/snapshots/transmute__parser__tests__err_struct_missing_second_field_colon.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number, b number, c: number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected identifier, expected one of (1) `:` 612",
                span: 1:25; [24, 30],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    609,
                ),
            },
        ],
    },
)
